fix: native color contrast property
The native color contrast function has been hardcoded onto the color property. This is mistake. Making the property dynamic depending on the argument passed to the mixin

--- a/src/styles/mix/_isomorphic-color-contrast.scss
+++ b/src/styles/mix/_isomorphic-color-contrast.scss
@@ -20,8 +20,8 @@
 
 	// https://developer.mozilla.org/en-US/docs/Web/CSS/color_value/color-contrast()
 	@supports (
-		color: #{"color-contrast(#{$background} vs #{$color-contrast-dark}, #{$color-contrast-light})"}
+		#{$property}: #{"color-contrast(#{$background} vs #{$color-contrast-dark}, #{$color-contrast-light})"}
 	) {
-		color: #{"color-contrast(#{$background} vs #{$color-contrast-dark}, #{$color-contrast-light})"};
+		#{$property}: #{"color-contrast(#{$background} vs #{$color-contrast-dark}, #{$color-contrast-light})"};
 	}
 }
